# Avalanche

./: CHANGELOG.md  README.md  avaAltered.tx  avalanche.tx  pyproject.toml  std.avalanche
New Speech/: Actions.tx  Causality.tx  Communication.tx  Core.tx  Events.tx  Lifecycle.tx  Quality.tx  Scenarios.tx  Simulation.tx  Spatial.tx  StateMachines.tx  Testing.tx  Timing.tx  new_speech.tx  overview.md
docs/: AVALANCHE.md
examples/: demo.avalanche
tests/: test_grammar.py  test_parse.py
tools/: build_new_speech.py  parse_model.py
